# pico-eeprom-emu

./: .gitignore  Cargo.toml  MIT-LICENSE  README.md  memory.x
.cargo/: config  config.toml
src/: main.rs
src/gpio_magic/: mod.rs
