[package]
name = "pico_eeprom_emu"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
rp2040-boot2 = "0.2.1"
rp2040-hal = "0.8.0"
rp2040-pac = "0.4.0"
