[package]
name = "pico_eeprom_emu"
version = "0.8.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = [ "critical-section-single-core" ] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embedded-hal = "1.0.0"
panic-probe = { version = "1.0.0", features = [ "print-rtt" ] }
rp2040-boot2 = "0.3.0"
rp2040-hal = "0.11.0"
#rp2040-panic-usb-boot = "0.6.0"

[features]
logging = []
